fix: update project name and description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "savi-semantic",
+  "name": "project-bootstrap-js",
   "version": "1.0.0",
-  "description": "",
+  "description": "Creates a new JS project skeleton",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
